# async-course

./: README.md  docker-compose.yml
auth/: .env.example  pyproject.toml
auth/app/: __main__.py  application.py  kafka.py  settings.py
auth/app/api/srv/: router.py  services.py  sso.py
auth/app/api/v1/: auth.py  deps.py  router.py
auth/app/api/v1/accounts/: endpoint.py  schemas.py
auth/app/models/: entities.py  enums.py  events.py  mixins.py
auth/migrations/: env.py  script.py.mako
auth/migrations/versions/: e8318599b12a_.py
auth/scripts/: const.py  lint.py
boilerplate/: .env.example  Dockerfile  docker-entrypoint.sh
boilerplate/app/adapters/: db.py
boilerplate/app/api/srv/: router.py
boilerplate/app/api/v1/: router.py
boilerplate/app/core/: celery.py  settings.py
boilerplate/app/models/: entities.py
boilerplate/scripts/: format.py
docs/data_model/: diagram.drawio
docs/domain_model/: diagram.drawio
docs/events/: DOCS.md  diagram.drawio
first-solution/: README.md  diagram.drawio
pg/: Dockerfile  create-multiple-postgresql-databases.sh
task-tracker/: .env.example  Dockerfile  pyproject.toml
task-tracker/app/: __main__.py  application.py  consumer.py  db.py  settings.py
task-tracker/app/api/: auth.py  deps.py  router.py
task-tracker/app/api/tasks/: endpoints.py  schemas.py
task-tracker/app/models/: entities.py  events.py  mixins.py
tasks/: Dockerfile  gunicorn_conf.py  pyproject.toml
tasks/app/models/: mixins.py
